--- a/sleepless-nights/src/components/Footer.css
+++ b/sleepless-nights/src/components/Footer.css
@@ -1,7 +1,7 @@
 .footer-wrap {
+    background: linear-gradient(rgba(9, 9, 6, 0.65), rgba(8, 7, 7, 0.25)), url('../assets/header-bg.png');
     height: 100%;
     width: auto;
-    background-color: black;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
