--- a/sleepless-nights/src/components/Header.css
+++ b/sleepless-nights/src/components/Header.css
@@ -1,6 +1,40 @@
 .header-div-wrap {
+    background: linear-gradient(rgba(9, 9, 6, 0.6), rgba(8, 7, 7, 0.25)), url('../assets/header-bg.png');
     height: 100%;
     width: auto;
     display: flex;
-    background: linear-gradient(45deg, rgba(255, 128, 0, 1), rgba(255, 69, 0, 1), rgba(184, 134, 11, 1), rgba(15, 20, 75, 1), rgba(93, 48, 139, 1));
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 1%;
+    margin: 0;
+}
+
+li 
+{
+    list-style-type: none;
+}
+
+.logo {
+    height: 5vh;
+    width: auto;
+}
+
+.logo-div {
+    padding-right: 48%;
+}
+
+
+
+.header-item .header-link { 
+    color: #fff;
+    text-shadow:
+      0 0 7px #fff,
+      0 0 10px #fff,
+      0 0 42px rgb(245, 87, 182),
+      0 0 42px rgb(245, 87, 182),
+      0 0 82px rgb(253, 86, 186),
+      0 0 92px rgb(239, 115, 189),
+      0 0 102px rgb(249, 95, 187),
+      0 0 151px rgb(249, 85, 183);
+    animation: flicker 1.5s infinite
 }
